# demo-llm-bot

./: .gitignore  Makefile  README.md  mlrun.env  project.yaml  project_setup.py  pyproject.toml  requirements-dev.txt  requirements-mlrun.txt  requirements.txt  scratch.ipynb  tutorial.ipynb
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
data/csv/: iris.csv
data/sample/: llamas.txt
data/sqlite/: palmer_penguins.db
dockerfiles/llmbot/: Dockerfile  requirements.txt
src/: __init__.py  chat.py  ingest.py  ingest_and_deploy_workflow.py  ingest_and_serve.py  ingest_documents.py  ingest_urls.py  llmindex.py  project_setup.py  serve_llm.py
src/llmbot/: __init__.py  agent.py  chains.py  config.py  ingest.py  ingestion.py  retrieve.py
src/llmbot/chains/: __init__.py  conversational_retrieval.py  math.py  sql_database.py
src/llmbot/ingestion/: __init__.py  documents.py  urls.py
src/llmbot/tools/: __init__.py  vector_store.py
src/project/: project_setup.py
src/project/functions/: ingest_documents.py
src/project/workflows/: ingest_and_serve.py
tests/: test_ingest_workflow.py
tests/llmbot/: test_ingest.py
tests/project/functions/: test_ingest_data.py  test_ingest_documents.py
