[tool.poetry]
name = "llmbot"
version = "0.1.0"
description = ""
authors = ["Nick Schenone <nicks@iguazio.com>", "Yaron Haviv <yaronh@iguazio.com>"]
readme = "README.md"
packages = [
    { include = "llmbot", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
mlrun = "^1.3.3"
gradio = "^3.35.2"
langchain = "^0.0.200"
ipywidgets = "^8.0.6"
graphviz = "^0.20.1"
chromadb = "^0.3.26"
sentence-transformers = "^2.2.2"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
pytest = "^5.4"
black = "^22.0"
flake8 = "^5.0"
isort = "^5.7"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
